<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="loginActivityViewModel"
            type="com.aeternity.aecan.viewModels.LoginActivityViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/void_string"
            android:scaleType="fitXY"
            android:src="@drawable/splash_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logoAECan"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="113dp"
                    android:contentDescription="@string/logo_description"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:focusedByDefault="true"
                    android:src="@drawable/logo_aeternity"
                    android:transitionName="imageLogo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textEmailLayout"
                    style="@style/editTextLayout"
                    android:layout_marginTop="55dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/colorAccent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        style="@style/editTextInput"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textPasswordLayout"
                    style="@style/editTextLayout"
                    android:layout_marginTop="@dimen/margin_10"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/colorAccent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        style="@style/editTextInput"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/buttonRounded.Blue"
                    android:layout_marginTop="@dimen/margin_32"
                    android:onClick="@{() -> loginActivityViewModel.onLoginButtonPressed()}"
                    android:text="@string/login_button" />

                <TextView
                    android:id="@+id/textAccount"
                    style="@style/monserratRegular.16.lightGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/login_text_do_not_have_account" />

                <Button
                    android:id="@+id/buttonSignUp"
                    style="@style/buttonRounded.Green"
                    android:layout_marginTop="@dimen/margin_21"
                    android:onClick="@{() -> loginActivityViewModel.onSignUpButtonPressed()}"
                    android:text="@string/login_register" />

                <Button
                    android:id="@+id/buttonRecoverPassword"
                    style="@style/buttonRounded.Green"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:onClick="@{() -> loginActivityViewModel.onForgotPasswordButtonPressed()}"
                    android:text="@string/recover_password" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>

