<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="numberLotModalViewModel"
            type="com.aeternity.aecan.viewModels.NumberLotModalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackOpacity30"
            android:onClick="@{()->numberLotModalViewModel.onDismissModalPressed()}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTitleInputNumberModal"
                style="@style/monserratBold.18.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_21"
                android:gravity="center"
                android:text="@string/modal_number_lot" />

            <EditText
                android:id="@+id/editTextInputNumberModal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_40"
                android:layout_marginBottom="@dimen/margin_20"
                android:hint="@string/hashtag"
                android:maxLength="7"
                android:textSize="@dimen/text_24"
                tools:text="3444567" />

            <Button
                android:id="@+id/buttonTextInputNumberModal"
                style="@style/buttonLightBlueModal"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_20"
                android:onClick="@{()->numberLotModalViewModel.onAddButtonPressed()}"
                android:text="@string/add" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
