<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeViewModel"
            type="com.aeternity.aecan.viewModels.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            style="@style/accentTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            app:tabTextAppearance="@style/monserratBold.14">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lots" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/buttonCreateLot"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_14"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:onClick="@{()->homeViewModel.onButtonCreateModalPressed()}"
            android:text="@string/create_new_lote">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="@dimen/margin_9"
                android:src="@drawable/icon_plus" />

            <TextView
                android:id="@+id/textCreateLot"
                style="@style/textWhite18MonserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_new_lote" />

        </LinearLayout>
    </LinearLayout>
</layout>
