<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aeternity.aecan.viewModels.StageDetailModalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.aeternity.aecan.views.modal.SingleButtonModalFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackOpacity30"
            android:onClick="@{() -> viewModel.onDismiss()}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewEndStage"
                style="@style/monserratBold.18.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/end_stage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAlert"
                style="@style/textView16MonserratLightGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_14"
                android:layout_marginEnd="@dimen/margin_30"
                android:gravity="center"
                textFormatter="@{viewModel.content}"
                greenText="@{viewModel.greenTextArray}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEndStage"
                tools:text="@string/alert_end_stage" />

            <Button
                android:id="@+id/buttonSingleButtonModal"
                style="@style/buttonLightBlueModal"
                android:layout_width="@dimen/width_152"
                android:layout_height="@dimen/height_45"
                android:layout_marginTop="@dimen/margin_19"
                android:layout_marginBottom="@dimen/margin_20"
                android:onClick="@{() -> viewModel.onCenterButtonClicked()}"
                android:text="@string/accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlert" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
